Clean up outdated language dependencies (Java 8, Kotlin 1.3) (#439)